tests/ui/cve_2020_25016/cve_2020_25016.stderr
error: it is unsound to cast any slice `&[T]` to a byte slice `&[u8]`
  --> tests/ui/cve_2020_25016/cve_2020_25016.rs:22:13
   |
LL | /             core::slice::from_raw_parts(
LL | |
LL | |                 slice.as_ptr() as *const _,
LL | |                 slice.len() * core::mem::size_of::<T>(),
LL | |             )
   | |_____________^
   |
note: trying to cast from this value of `&[T]` type
  --> tests/ui/cve_2020_25016/cve_2020_25016.rs:19:21
   |
LL |         let slice = self.as_slice();
   |                     ^^^^^^^^^^^^^^^

error: it is unsound to cast any slice `&mut [T]` to a byte slice `&mut [u8]`
  --> tests/ui/cve_2020_25016/cve_2020_25016.rs:35:13
   |
LL | /             core::slice::from_raw_parts_mut(
LL | |
LL | |                 slice.as_mut_ptr() as *mut _,
LL | |                 slice.len() * core::mem::size_of::<T>(),
LL | |             )
   | |_____________^
   |
note: trying to cast from this value of `&mut [T]` type
  --> tests/ui/cve_2020_25016/cve_2020_25016.rs:32:21
   |
LL |         let slice = self.as_mut_slice();
   |                     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

